spade-tests/src/snapshots/spade_tests__integration__lambda_entity_clock_must_be_clock.snap
---
source: spade-tests/src/integration.rs
---
entity test(clk: clock) {
    let _ = entity |clk| {
        let clk: uint<8> = clk;
    }.inst call(clk, ());
}


error: Expected type uint<8>, got clock
  ┌─ testinput:3:28
  │
2 │     let _ = entity |clk| {
  │                     --- Type clock inferred here
3 │         let clk: uint<8> = clk;
  │                  -------   ^^^ Expected uint<8>
  │                  │          
  │                  Type uint<8> inferred here
  │
  = note: Expected: uint<8>
               Got: clock
  = The error is in a generic unit instantiated at
    ╰ testinput:2 impl#43::call<()>
