spade-tests/src/snapshots/spade_tests__integration__lambda_pipelines_need_clock.snap
---
source: spade-tests/src/integration.rs
---
entity test() {
    pipeline(1) () {
        reg;
    };
}


error: Non-function lambdas must take a clock.
  ┌─ testinput:2:17
  │
2 │     pipeline(1) () {
  │     ----------- ^^ Expected a clock
  │     │            
  │     Required because this is not a `fn`
  │
  = Consider adding a clock
  │
2 │     pipeline(1) (clk) {
  │                 ~~~~~
