spade-tests/src/snapshots/spade_tests__integration__lambdas_capture_impl_params.snap
---
source: spade-tests/src/integration.rs
expression: "items.iter().map(| item | format! (\"{item}\")).join(\"\\n\")"
---
entity \test () -> () {
	let e13: {} = ConstructTuple()
	let e12: () = Instance(\impl#0::test[552] )(e13)
} => e12
entity \impl#0::test[552] ((self, self_n108, {})) -> () {
	let e3: {} = ConstructTuple()
	let e9: () = ConstructTuple()
	let e2: () = Instance(\impl#1::call[553] )(e3, e9)
	let l_n120: () = Alias(e2)
	let e1: () = Nop()
} => e1
entity \impl#1::call[553] ((self, self_n118, {}), (args, args_n119, ())) -> () {
	const e4: uint<8> = 5
	let x_n109: uint<8> = Alias(e4)
	let e6: () = Nop()
} => e6
