spade-tests/src/snapshots/spade_tests__integration__lambdas_that_capture_non_copy_are_non_copy.snap
---
source: spade-tests/src/integration.rs
---
entity test(clk: clock) {
    let w = port().1;
    let l = fn || {
        set w = 0u32;
    };
    reg(clk) r = l;
}


error: Trait bound not satisfied. Lambda<(), inv uint<32>> does not implement core::marker::Copy
  ┌─ testinput:6:14
  │
6 │     reg(clk) r = l;
  │     ---      ^   - The type of this expression is not `Data + Copy` which means it cannot be stored in a register.
  │     │        │    
  │     │        Lambda<(), inv uint<32>> does not implement core::marker::Copy
  │     Required because of the trait bound specified here
  │
  = help: An expression not being `Data + Copy` means it contains at least one `inv` or `clock` type
  = help: You can learn more about `Data` here: https://docs.spade-lang.org/wires.html
